Cut over improved min_model_M to tests/multialgorithm/fixtures/; switched on DEBUG-level debug logging.

--- a/wc_sim/core/config/debug.default.cfg
+++ b/wc_sim/core/config/debug.default.cfg
@@ -10,7 +10,7 @@
     [[handlers]]
         [[[debug.file]]]
             class = FileHandler
-            filename = ~/tmp/logs/wc/debug.log
+            filename = /tmp/logs/wc/debug.log
             mode = a
 
         [[[plot.file]]]
@@ -24,7 +24,7 @@
 
     [[loggers]]
         [[[wc.debug.file]]]
-            level = INFO
+            level = DEBUG
             formatters = default,
             handlers = debug.file,
             [[[[additional_context]]]]
