make test case validator; add test stochastic/00101, a modification of stochastic/00001 to test wc_sim which doesnt yet support parameters in rate laws; fix rate laws in 00101-wc_lang.xlsx; add default num of simul runs to config files; have git ignore tmp files; comprehensively unit test

--- a/wc_sim/multialgorithm/config/core.schema.cfg
+++ b/wc_sim/multialgorithm/config/core.schema.cfg
@@ -22,3 +22,6 @@
         # near simultaneous events
 
         checkpoint_period = float(min=0, default=10)
+
+        num_ssa_validation_sim_runs = integer(min=1, default=100)
+        # the default number of simulation runs in a Monte Carlo validation
